# advent_of_code_template

./: .gitignore  CMakeLists.txt  README.md  day_defs.hpp  main.cpp
_template/: template.cpp
day_01/: day1.txt  day_1.hpp
util/: BenchStats.hpp  Day.cpp  Day.hpp  macros.hpp  placeholders.hpp
